--- a/src/Todo.Client/Todo.Client.csproj
+++ b/src/Todo.Client/Todo.Client.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Polly" Version="8.2.0" />
+      <PackageReference Include="Polly" Version="8.4.2" />
       <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
-      <PackageReference Include="Ulid" Version="1.3.3" />
+      <PackageReference Include="Ulid" Version="1.3.4" />
     </ItemGroup>
 
 </Project>
