--- a/src/Todo.Core/Todo.Core.csproj
+++ b/src/Todo.Core/Todo.Core.csproj
@@ -1,23 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AWSSDK.SSO" Version="3.7.300.12" />
-      <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.301.7" />
-      <PackageReference Include="dotenv.net" Version="3.1.3" />
-      <PackageReference Include="EfficientDynamoDb" Version="0.9.14" />
+      <PackageReference Include="AWSSDK.SSO" Version="3.7.400.35" />
+      <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.400.35" />
+      <PackageReference Include="dotenv.net" Version="3.2.1" />
+      <PackageReference Include="EfficientDynamoDb" Version="0.9.16" />
       <PackageReference Include="EfficientDynamoDb.Credentials.AWSSDK" Version="0.9.3" />
-      <PackageReference Include="FastEndpoints.Testing" Version="5.20.1" />
-      <PackageReference Include="Riok.Mapperly" Version="3.2.0" />
-      <PackageReference Include="Serilog" Version="3.1.1" />
-      <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
-      <PackageReference Include="Ulid" Version="1.3.3" />
+      <PackageReference Include="FastEndpoints.Testing" Version="5.30.0" />
+      <PackageReference Include="FluentValidation" Version="11.10.0" />
+      <PackageReference Include="Riok.Mapperly" Version="4.0.0" />
+      <PackageReference Include="Serilog" Version="4.0.2" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+      <PackageReference Include="Ulid" Version="1.3.4" />
     </ItemGroup>
 
 </Project>
