--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.1
+          dotnet-version: 8.0.x
       - uses: actions/setup-node@v3
         with:
           node-version: 18
