--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "todo-api",
   "version": "0.1.0",
+  "bin": {
+    "order": "bin/stack.js"
+  },
   "scripts": {
     "cdk": "cdk",
     "sso": "aws sso login --profile todo-api",
-    "build": "docker-compose -f docker-compose.yml build",
-    "push": "docker-compose -f docker-compose.yml push",
+    "build": "docker compose -f docker-compose.yml build",
+    "push": "docker compose -f docker-compose.yml push",
     "unit": "dotnet test ./src/Todo.UnitTests",
     "integration": "dotnet test ./src/Todo.IntegrationTests",
     "e2e": "dotnet test ./src/Todo.EndToEndTests"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
-    "aws-cdk": "2.94.0",
-    "dotenv": "^16.3.1",
-    "env-var": "^7.4.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "@types/node": "20.11.26",
+    "aws-cdk": "2.133.0",
+    "esbuild": "0.20.0",
+    "ts-node": "10.9.1",
+    "typescript": "5.4.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.94.0",
+    "aws-cdk-lib": "2.133.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "dotenv": "16.3.1",
+    "env-var": "7.4.1",
+    "source-map-support": "0.5.21"
   },
   "prettier": {
     "printWidth": 120
