--- a/src/Todo.Api/Todo.Api.csproj
+++ b/src/Todo.Api/Todo.Api.csproj
@@ -10,10 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.1" />
         <PackageReference Include="FastEndpoints" Version="5.30.0" />
+        <PackageReference Include="FastEndpoints.ClientGen.Kiota" Version="5.30.0" />
         <PackageReference Include="FastEndpoints.Swagger" Version="5.30.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
     </ItemGroup>
 
     <ItemGroup>
