--- a/src/Todo.Client/Todo.Client.csproj
+++ b/src/Todo.Client/Todo.Client.csproj
@@ -8,9 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Polly" Version="8.4.2" />
-      <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
-      <PackageReference Include="Ulid" Version="1.3.4" />
+        <PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Serialization.Json" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Serialization.Multipart" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Serialization.Text" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Authentication.Azure" Version="1.13.1" />
+        <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.13.1" />
     </ItemGroup>
 
 </Project>
